@@ -295,7 +295,7 @@ module Gem
 
     
     overwrite_accessor :files do
-      @files | @test_files | @executables | @extra_rdoc_files | @library_stubs | @extensions
+      (@files || []) | (@test_files || [])| (@executables || [])| (@extra_rdoc_files || [])| (@library_stubs || [])| (@extensions || [])
     end
 
     overwrite_accessor :test_files do
